# stream_mpi_cxl

./: .gitignore  CMakeLists.txt  README.md
hostfiles/: hostfile
notes/: stream.c
playground1_init/scripts/: run00.stream_mpi.with_cxl.1-nodes.sh  run00.stream_mpi.with_cxl.2-nodes.sh  run01.stream_mpi.no_cxl.2-nodes.sh  test00.hostname.sh
playground2_rapid/scripts/: run00.stream_mpi.with_cxl.1-nodes.sh  run00.stream_mpi.with_cxl.2-nodes.sh  run01.stream_mpi.no_cxl.2-nodes.sh
src/: stream_mpi.c  stream_mpi_with_cxl.c
